[package]
name = "avrit"
version = "0.1.0"
authors = ["Amiya Behera <amiyatulu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "3.0.1"
wee_alloc = "0.4.5"
rand = "0.7.3"
chrono = "0.4.19"
sha3 = "0.9.1"
serde = "1.0.117"



[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[workspace]
members = []
